--- a/components/molecules/card-testimonial/card-testimonial.css
+++ b/components/molecules/card-testimonial/card-testimonial.css
@@ -33,8 +33,8 @@
   gap: 20px;
 }
 
-.card-testimonial-profile img {
-  width: 60px;
+.card-testimonial-profile .card-testimonial-profile-image {
+  max-width: 60px;
 }
 
 .card-testimonial-profile h5 {
