--- a/components/molecules/card-testimonial/card-testimonial.css
+++ b/components/molecules/card-testimonial/card-testimonial.css
@@ -31,6 +31,7 @@
   display: flex;
   align-items: center;
   gap: 20px;
+  text-align: left;
 }
 
 .card-testimonial-profile .card-testimonial-profile-image {
