--- a/components/atoms/header-section/header-section.css
+++ b/components/atoms/header-section/header-section.css
@@ -34,6 +34,11 @@
   margin-left: 5px;
   border: none;
   border-radius: 5px;
+  cursor: pointer;
+}
+
+.header-section-buttons button:hover {
+  background-color: #dde3ff;
 }
 
 .header-section-buttons img {
