--- a/components/molecules/card-product/card-product.css
+++ b/components/molecules/card-product/card-product.css
@@ -26,31 +26,11 @@
 .card-product-image-container img {
   width: 100%;
 }
-.card-product-action {
+
+.card-product .card-product-action {
   position: absolute;
-  width: 100%;
-  height: 35px;
   bottom: 20px;
-  justify-content: center;
-  gap: 5px;
   display: none;
-  transition: all 0.5s;
-}
-
-.card-product-action button {
-  background-color: white;
-  border-radius: 5px;
-  border: none;
-  padding: 0 15px;
-}
-
-.card-product-action .card-product-add-to-cart {
-  color: white;
-  background-color: #ff497c;
-}
-
-.card-product-action img {
-  width: 20px;
 }
 
 .card-product-offer {
